--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -2,7 +2,7 @@ name: GCP
 
 on:
   push:
-    branches: [main]
+    branches: [master]
 
 jobs:
   deploy:
@@ -27,7 +27,7 @@ jobs:
 
       # build image
       - name: Build Docker image
-        run: docker build -t $IMAGE_NAME .
+        run: docker build -t $IMAGE_NAME ./php-fpm/
 
       # push image to registry
       - name: Push Docker image
