--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -27,7 +27,7 @@ jobs:
 
       # build image
       - name: Build Docker image
-        run: docker build -t $IMAGE_NAME ./php-fpm/
+        run: docker build -t $IMAGE_NAME ./phpdocker/php-fpm/
 
       # push image to registry
       - name: Push Docker image
